src/test/deca/context/invalid/created/objet/champ_protege2.deca
// Description:
//      Erreur contextuelle : le type de 'a' (A) n'est pas un sous-type de B.
//      le type de l’expression doit être un sous-type de la classe courante
//Resultat :
//    Ligne 14 : variable inconnue


class A {
    protected int x;
}

class B extends A {
    int getX(A a) {
        return a.x; 
    }
}